3 techniques Using css file

--- a/Lesson 3(HTML).html
+++ b/Lesson 3(HTML).html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic HTML</title>
+    <!-- 1st way to use css file(External), import external css file.. -->
+    <link rel="stylesheet" href="/Library Style.css">
+    <!-- 2nd way to use css file(Internal), write css properties in <style></style> tag inside 'head' portion of html file -->
+    <!-- <style>
+        body{
+            color:rebeccapurple;
+        }
+    </style> -->
 </head>
 <body>
+    <!-- 3rd way of using css(Inline), is use it in the body by using <style></style> tag & properties:values -->
+    <!-- <h1 style="color:blueviolet">Component Library</h1> -->
     <h1>Component Library</h1>
     <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
     <hr>
