add containers in div tag

--- a/Lesson 3(HTML).html
+++ b/Lesson 3(HTML).html
@@ -35,9 +35,9 @@
     <h2>@ Container...</h2><!--We should use this tags properly so that screen reader can read it properly for specially disabled people-->
     <p>There are two types of container- fluid container & center ontainer</p>
     <h3>*fluid container/-</h3>
-    <div>This is going to be a fluid container.</div>
+    <div class="Container-Fluid">This is going to be a fluid container.</div>
     <h3>*center container/-</h3>
-    <div>This is going to be a center container.</div><br><hr>
+    <div class="Container-Center">This is going to be a center container.</div><br><hr>
 
     <h2>@ Links...</h2>
     <a href="/"> Primaey Link</a><!-- this tag is an inine element -->
