--- a/Lesson 3(HTML).html
+++ b/Lesson 3(HTML).html
@@ -40,10 +40,10 @@
     <div class="Container-Center">This is going to be a center container.</div><br><hr>
 
     <h2>@ Links...</h2>
-    <a href="/"> Primaey Link</a><!-- this tag is an inine element -->
+    <a class="primary-link" href="/"> Primary Link</a><!-- this tag is an inine element -->
     &nbsp; &nbsp; &nbsp;<!-- x'' = Space -->
     &nbsp; &nbsp; &nbsp;<!-- '&nbsp;' = Space -->
-    <a href="/"> Secondary Link</a><br><br><hr>
+    <a class="secondary-link" href="/"> Secondary Link</a><br><br><hr>
 
     <h2>@ List...</h2> <!-- Block Element -->
     <!-- There are two types of list, Ordered list & Unordered list -->
