--- a/Lesson 3(HTML).html
+++ b/Lesson 3(HTML).html
@@ -40,37 +40,37 @@
     <div class="Container-Center">This is going to be a center container.</div><br><hr>
 
     <h2>@ Links...</h2>
-    <a class="primary-link" href="/"> Primary Link</a><!-- this tag is an inine element -->
+    <a class="link-primary" href="/"> Primary Link</a><!-- this tag is an inine element -->
     &nbsp; &nbsp; &nbsp;<!-- x'' = Space -->
     &nbsp; &nbsp; &nbsp;<!-- '&nbsp;' = Space -->
-    <a class="secondary-link" href="/"> Secondary Link</a><br><br><hr>
+    <a class="link-secondary" href="/"> Secondary Link</a><br><br><hr>
 
     <h2>@ List...</h2> <!-- Block Element -->
     <!-- There are two types of list, Ordered list & Unordered list -->
     <!-- ul= unordered list, ol= ordered list, li= list items -->
     <h3>*Unordered List/-</h3>
-    <ul>
-       <li>Otem One</li>  
-       <li>Otem Two</li>  
-       <li>Otem Three</li>  
-       <li>Otem Four</li>  
-       <li>Otem Five</li>  
+    <ul class="list-ul-style">
+       <li>item One</li>  
+       <li>item Two</li>  
+       <li>item Three</li>  
+       <li>item Four</li>  
+       <li>item Five</li>  
     </ul>
     <h3>*Ordered List/-</h3>
     <ol>
-        <li>Otem One</li>  
-        <li>Otem Two</li>  
-        <li>Otem Three</li>  
-        <li>Otem Four</li>  
-        <li>Otem Five</li>
+        <li>item One</li>  
+        <li>item Two</li>  
+        <li>item Three</li>  
+        <li>item Four</li>  
+        <li>item Five</li>
     </ol>
     <h3>*Reverse Ordered List/-</h3><!--logic done in css-->
     <ol>
-        <li>Otem One</li>  
-        <li>Otem Two</li>  
-        <li>Otem Three</li>  
-        <li>Otem Four</li>  
-        <li>Otem Five</li>
+        <li>item One</li>  
+        <li>item Two</li>  
+        <li>item Three</li>  
+        <li>item Four</li>  
+        <li>item Five</li>
     </ol> <br><hr>
 
     <h2>@ Navigation(nav)...</h2>
